[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/actors/AI_pistol/AI_pistol.gd" type="Script" id=1]
[ext_resource path="res://assets/characters/enemies/SoldierPistol.png" type="Texture" id=2]
[ext_resource path="res://scenes/objects/HealthBar/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.0604, 17.4818 )

[node name="AI_pistol" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 15
script = ExtResource( 1 )
fire_rate = 1.0
detect_radius = 416

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 6.45276, 5.3773 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.73338, 1.14173 )
shape = SubResource( 1 )

[node name="Gun" type="Position2D" parent="."]
position = Vector2( 21.2493, 2.36103 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="Visibility" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="Radius" type="CollisionShape2D" parent="Visibility"]

[node name="WarmUpTimer" type="Timer" parent="."]

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = -7.36328
margin_top = 20.455
margin_right = 22.6367
margin_bottom = 26.455
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
[connection signal="timeout" from="WarmUpTimer" to="." method="_on_WarmUpTimer_timeout"]
